# Rolling-Zonalization

./: .gitignore  LICENSE  Makefile  README.md  meson.build  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  test.yml
docs/source/: conf.py  general.rst  index.rst  pvgradient.rst  utils.rst  visualization.rst  waveactivity.rst  wavenumber.rst  zonalization.rst
docs/source/_static/: custom.css
src/: __init__.py  calculate_means.py  calculate_occurrence.py  calculate_pv.py  calculate_pvrz.py  calculate_rollmean.py  calculate_sprops.py  download_ERA5.py  plot_barotropic.py  plot_climatology.py  plot_episode.py  plot_schematic.py
src/common/: encoding.py  plotting.py  seasons.py  xarray.py
src/rwguide/: __init__.py  bindings.py  meson.build
src/rwguide/hovmoeller/: build.py  ext.c  meson.build
src/rwguide/pvgradient/: __init__.py  build.py  ext.c  meson.build  processing.py  variables.py
src/rwguide/waveactivity/: __init__.py  build.py  ext.c  lwa.py  meson.build
src/rwguide/wavenumber/: __init__.py  build.py  ext.c  meson.build  wavenumber.py
src/rwguide/xarray/: __init__.py  common.py  hovmoeller.py  pvgradient.py  waveactivity.py  wavenumber.py  zonalization.py
src/rwguide/zonalization/: __init__.py  build.py  density.py  ext.c  meson.build  weighting.py
src/waveguide/: bindings.py
src/waveguide/hovmoeller/: __init__.py  build.py  refined.py
src/waveguide/pvgradient/: build.py
src/waveguide/wavenumber/: __init__.py  build.py
src/waveguide/xarray/: common.py  wavenumber.py  zonalization.py
src/waveguide/zonalization/: __init__.py  build.py  weighting.py  zonalize.py
