[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0.3", "wheel", "cffi"]

[project]
name = "rwguide"
authors = [
    { name="Christopher Polster", email="chpolste@tuta.io" },
]
description = "Rossby waveguide analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { file="LICENSE" }
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "cffi>=1.15.1",
    "numpy>=1.24.3",
    "scipy>=1.10.1",
    "xarray>=2022.11.0"
]

[project.urls]
documentation = "https://wavestoweather.github.io/Rolling-Zonalization"
source = "https://github.com/wavestoweather/Rolling-Zonalization"

[tool.setuptools.packages.find]
where =  ["./src"]
include = ["rwguide"]

[tool.setuptools.package-data]
rwguide = ["*/*.so"]

[tool.setuptools.dynamic]
version = { attr="rwguide.__version__" }

