[build-system]
build-backend = "mesonpy"
requires = ["meson-python", "cffi>=1.17", "wheel"]

[project]
name = "rwguide"
authors = [
    { name="Christopher Polster", email="chpolste@tuta.io" },
]
description = "Rossby waveguide analysis"
readme = "README.md"
requires-python = ">=3.9"
license = { file="LICENSE" }
version = "1.2.2"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "cffi>=1.17",
    "numpy>=1.24.3",
    "scipy>=1.10.1",
    "xarray>=2022.11.0"
]

[project.urls]
documentation = "https://wavestoweather.github.io/Rolling-Zonalization"
source = "https://github.com/wavestoweather/Rolling-Zonalization"

